--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ SMTP_SSL=False
 SMTP_PORT=587
 
 # Postgres
-POSTGRES_SERVER=localhost
+POSTGRES_SERVER=172.31.37.82
 POSTGRES_PORT=5432
 POSTGRES_DB=app
 POSTGRES_USER=postgres
